# snowmover

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: docs.yml
docs/: conf.py  index.rst  requirements.txt
src/snowmover/: __init__.py
